  elements, nothing more). 
- Improved FSets/FMaps. In particular FMap now provides an induction principle 
  on maps, and some properties about FSets and fold need less hypothesis. 
  The polymorphic parameter for the fold function is now in Type. 
- Loading FSets/FMap used to open unwanted scopes of integer datatypes 
  (see bug #1347). These scopes may need to be opened manually now.

Language

- Sort of Record/Structure, Inductive and CoInductive defaults to Type
  if omitted
- Record/Structure now usable for defining coinductive types
  (e.g. "Record stream := { hd : nat; tl : stream }.")

Notations and implicit arguments

- New options "Set Maximal Implicit Insertion", "Set Reversible Pattern
  Implicit", "Set Strongly Strict Implicit" and "Set Printing Implicit
  Defensive" for controlling inference and use of implicit arguments.
- New modifier in "Implicit Arguments" to force an implicit argument to
  be maximally inserted.
- Level "constr" moved from 9 to 8.
- Structure/Record now printed as Record (unless option Printing All is set).

Tactic Language

- Second-order pattern-matching now working in Ltac "match" clauses
  (syntax for second-order unification variable is "@?X").
- Ltac accepts integer arguments (syntax is "ltac:nnn" for nnn an integer)
- The general sequence tactical "expr_0 ; [ expr_1 | ... | expr_n ]"
  is extended so that at most one expr_i may have the form "expr .."
  or just "..". Also, n can be different from the number of subgoals
  generated by expr_0. In this case, the value of expr (or idtac in
  case of just "..") is applied to the intermediate subgoals to make
  the number of tactics equal to the number of subgoals.
- Names to be used as actual identifiers (like f in "apply f_equal f:=t")
  must not be used elsewhere as variables in the same ltac expression
  (possible source of incompatibility).

Tactics

- New tactics [apply -> term], [apply <- term], [apply -> term in